apps/hello-world/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  annotations:
    argocd.argoproj.io/sync-wave: "1"
